# Coach_garmin

./: .gitignore  .gitmodules  AGENTS.md  README.md  Start Coach Garmin PWA.cmd  logics.yaml  pyproject.toml
.claude/agents/: logics-backlog-groom.md  logics-flow-manager.md  logics-hybrid-delivery-assistant.md  logics-request-draft.md  logics-spec-first-pass.md
.claude/commands/: logics-assist.md  logics-backlog-groom.md  logics-flow.md  logics-request-draft.md  logics-spec-first-pass.md
coach_garmin/: __init__.py  __main__.py  analytics.py  analytics_series.py  analytics_support.py  cli.py  coach_chat.py  coach_chat_support.py  coach_gemini.py  coach_llm.py  coach_ollama.py  coach_openai.py  coach_tools.py  coach_tools_support.py  config.py  contracts.py  coverage.py  env.py  fit_parser.py  garmin_auth.py  garmin_auth_support.py  manual_import.py  pwa_service.py  pwa_service_runtime_support.py  pwa_service_support.py  storage.py  sync_state.py  text_encoding.py
docs/: dashboard_metric_calculations.md  garmin_data_foundation.md  maintenance_audit_2026_04_27.md
logics/: INDEX.md  RELATIONSHIPS.md  REVIEW.md  instructions.md
logics/architecture/: adr_000_choose_local_first_garmin_data_sync_and_storage_architecture.md  adr_001_choose_local_pwa_storage_and_provider_integration.md  adr_005_choose_end_to_end_utf_8_and_nfc_text_policy.md  (+4 more)
logs/: garmin-sync-debug.jsonl
tests/: test_coach_chat.py  test_garmin_auth_sync.py  test_manual_import.py  test_pwa_service.py  test_text_encoding.py
web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
(+108 files in other folders)
