[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coach-garmin"
version = "0.1.0"
description = "Local-first Garmin Connect backup and deterministic analysis foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1,<2",
    "garminconnect>=0.3.1,<0.4",
    "curl_cffi>=0.15,<0.16",
]

[project.scripts]
coach-garmin = "coach_garmin.cli:main"

[tool.setuptools.packages.find]
include = ["coach_garmin*"]
